fix wrapping for submission-sort

--- a/src/AppBundle/Resources/assets/less/submissions.less
+++ b/src/AppBundle/Resources/assets/less/submissions.less
@@ -48,14 +48,16 @@
 
 .submission-sort {
   display: flex;
+  flex-wrap: wrap;
 
   ul {
     display: table;
-    padding: 0;
+    margin: 0;
+    padding: 0 1rem 1rem 0;
   }
 
-  ul + ul {
-    margin-left: 1rem;
+  ul:last-child {
+    padding-right: 0;
   }
 
   li {
